Inclui a classe active nos menus

--- a/app/views/task.html
+++ b/app/views/task.html
@@ -1,4 +1,4 @@
-<tks-header></tks-header>
+<tks-header label="Tarefas"></tks-header>
 
 <div class="container pdTop-container">
     <!-- Form de Criação da Tarefa -->
