--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -14,8 +14,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#/">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="#/tarefa">Tarefas</a></li>
+                <li ng-class="{ 'active' : label === 'Home' }"><a href="#/">Home <span class="sr-only">(current)</span></a></li>
+                <li ng-class="{ 'active' : label === 'Tarefas' }"><a href="#/tarefa">Tarefas</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
