--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -16,6 +16,7 @@
             <ul class="nav navbar-nav">
                 <li ng-class="{ 'active' : label === 'Home' }"><a href="#/">Home <span class="sr-only">(current)</span></a></li>
                 <li ng-class="{ 'active' : label === 'Tarefas' }"><a href="#/tarefa">Tarefas</a></li>
+                <li><a href="#/">Sair</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
